# serializer version: 1
# name: test_sensor[sensor.la_clusaz_cloud_cover-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.la_clusaz_cloud_cover',
    'has_entity_name': False,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': 'mdi:weather-partly-cloudy',
    'original_name': 'La Clusaz Cloud cover',
    'platform': 'meteo_france',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': '45.90417,6.42306_cloud',
    'unit_of_measurement': '%',
  })
# ---
# name: test_sensor[sensor.la_clusaz_cloud_cover-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'attribution': 'Data provided by Météo-France',
      'friendly_name': 'La Clusaz Cloud cover',
      'icon': 'mdi:weather-partly-cloudy',
      'unit_of_measurement': '%',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.la_clusaz_cloud_cover',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '70',
  })
# ---
# name: test_sensor[sensor.la_clusaz_daily_original_condition-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.la_clusaz_daily_original_condition',
    'has_entity_name': False,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'La Clusaz Daily original condition',
    'platform': 'meteo_france',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': '45.90417,6.42306_daily_original_condition',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensor[sensor.la_clusaz_daily_original_condition-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'attribution': 'Data provided by Météo-France',
      'friendly_name': 'La Clusaz Daily original condition',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.la_clusaz_daily_original_condition',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'Eclaircies',
  })
# ---
# name: test_sensor[sensor.la_clusaz_daily_precipitation-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.la_clusaz_daily_precipitation',
    'has_entity_name': False,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.PRECIPITATION: 'precipitation'>,
    'original_icon': None,
    'original_name': 'La Clusaz Daily precipitation',
    'platform': 'meteo_france',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': '45.90417,6.42306_precipitation',
    'unit_of_measurement': <UnitOfPrecipitationDepth.MILLIMETERS: 'mm'>,
  })
# ---
# name: test_sensor[sensor.la_clusaz_daily_precipitation-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'attribution': 'Data provided by Météo-France',
      'device_class': 'precipitation',
      'friendly_name': 'La Clusaz Daily precipitation',
      'unit_of_measurement': <UnitOfPrecipitationDepth.MILLIMETERS: 'mm'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.la_clusaz_daily_precipitation',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '1.3',
  })
# ---
# name: test_sensor[sensor.la_clusaz_freeze_chance-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.la_clusaz_freeze_chance',
    'has_entity_name': False,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': 'mdi:snowflake',
    'original_name': 'La Clusaz Freeze chance',
    'platform': 'meteo_france',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': '45.90417,6.42306_freeze_chance',
    'unit_of_measurement': '%',
  })
# ---
# name: test_sensor[sensor.la_clusaz_freeze_chance-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'attribution': 'Data provided by Météo-France',
      'friendly_name': 'La Clusaz Freeze chance',
      'icon': 'mdi:snowflake',
      'unit_of_measurement': '%',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.la_clusaz_freeze_chance',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '0',
  })
# ---
# name: test_sensor[sensor.la_clusaz_humidity-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.la_clusaz_humidity',
    'has_entity_name': False,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.HUMIDITY: 'humidity'>,
    'original_icon': None,
    'original_name': 'La Clusaz Humidity',
    'platform': 'meteo_france',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': '45.90417,6.42306_humidity',
    'unit_of_measurement': '%',
  })
# ---
# name: test_sensor[sensor.la_clusaz_humidity-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'attribution': 'Data provided by Météo-France',
      'device_class': 'humidity',
      'friendly_name': 'La Clusaz Humidity',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': '%',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.la_clusaz_humidity',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '75',
  })
# ---
# name: test_sensor[sensor.la_clusaz_original_condition-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.la_clusaz_original_condition',
    'has_entity_name': False,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'La Clusaz Original condition',
    'platform': 'meteo_france',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': '45.90417,6.42306_original_condition',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensor[sensor.la_clusaz_original_condition-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'attribution': 'Data provided by Météo-France',
      'friendly_name': 'La Clusaz Original condition',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.la_clusaz_original_condition',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'Eclaircies',
  })
# ---
# name: test_sensor[sensor.la_clusaz_pressure-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.la_clusaz_pressure',
    'has_entity_name': False,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.PRESSURE: 'pressure'>,
    'original_icon': None,
    'original_name': 'La Clusaz Pressure',
    'platform': 'meteo_france',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': '45.90417,6.42306_pressure',
    'unit_of_measurement': <UnitOfPressure.HPA: 'hPa'>,
  })
# ---
# name: test_sensor[sensor.la_clusaz_pressure-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'attribution': 'Data provided by Météo-France',
      'device_class': 'pressure',
      'friendly_name': 'La Clusaz Pressure',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': <UnitOfPressure.HPA: 'hPa'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.la_clusaz_pressure',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '988.7',
  })
# ---
# name: test_sensor[sensor.la_clusaz_rain_chance-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.la_clusaz_rain_chance',
    'has_entity_name': False,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': 'mdi:weather-rainy',
    'original_name': 'La Clusaz Rain chance',
    'platform': 'meteo_france',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': '45.90417,6.42306_rain_chance',
    'unit_of_measurement': '%',
  })
# ---
# name: test_sensor[sensor.la_clusaz_rain_chance-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'attribution': 'Data provided by Météo-France',
      'friendly_name': 'La Clusaz Rain chance',
      'icon': 'mdi:weather-rainy',
      'unit_of_measurement': '%',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.la_clusaz_rain_chance',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_sensor[sensor.la_clusaz_snow_chance-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.la_clusaz_snow_chance',
    'has_entity_name': False,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': 'mdi:weather-snowy',
    'original_name': 'La Clusaz Snow chance',
    'platform': 'meteo_france',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': '45.90417,6.42306_snow_chance',
    'unit_of_measurement': '%',
  })
# ---
# name: test_sensor[sensor.la_clusaz_snow_chance-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'attribution': 'Data provided by Météo-France',
      'friendly_name': 'La Clusaz Snow chance',
      'icon': 'mdi:weather-snowy',
      'unit_of_measurement': '%',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.la_clusaz_snow_chance',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_sensor[sensor.la_clusaz_temperature-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.la_clusaz_temperature',
    'has_entity_name': False,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.TEMPERATURE: 'temperature'>,
    'original_icon': None,
    'original_name': 'La Clusaz Temperature',
    'platform': 'meteo_france',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': '45.90417,6.42306_temperature',
    'unit_of_measurement': <UnitOfTemperature.CELSIUS: '°C'>,
  })
# ---
# name: test_sensor[sensor.la_clusaz_temperature-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'attribution': 'Data provided by Météo-France',
      'device_class': 'temperature',
      'friendly_name': 'La Clusaz Temperature',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': <UnitOfTemperature.CELSIUS: '°C'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.la_clusaz_temperature',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '9.1',
  })
# ---
# name: test_sensor[sensor.la_clusaz_uv-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.la_clusaz_uv',
    'has_entity_name': False,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': 'mdi:sunglasses',
    'original_name': 'La Clusaz UV',
    'platform': 'meteo_france',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': '45.90417,6.42306_uv',
    'unit_of_measurement': 'UV index',
  })
# ---
# name: test_sensor[sensor.la_clusaz_uv-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'attribution': 'Data provided by Météo-France',
      'friendly_name': 'La Clusaz UV',
      'icon': 'mdi:sunglasses',
      'unit_of_measurement': 'UV index',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.la_clusaz_uv',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '1',
  })
# ---
# name: test_sensor[sensor.la_clusaz_wind_gust-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.la_clusaz_wind_gust',
    'has_entity_name': False,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.WIND_SPEED: 'wind_speed'>,
    'original_icon': 'mdi:weather-windy-variant',
    'original_name': 'La Clusaz Wind gust',
    'platform': 'meteo_france',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': '45.90417,6.42306_wind_gust',
    'unit_of_measurement': <UnitOfSpeed.KILOMETERS_PER_HOUR: 'km/h'>,
  })
# ---
# name: test_sensor[sensor.la_clusaz_wind_gust-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'attribution': 'Data provided by Météo-France',
      'device_class': 'wind_speed',
      'friendly_name': 'La Clusaz Wind gust',
      'icon': 'mdi:weather-windy-variant',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': <UnitOfSpeed.KILOMETERS_PER_HOUR: 'km/h'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.la_clusaz_wind_gust',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '65',
  })
# ---
# name: test_sensor[sensor.la_clusaz_wind_speed-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.la_clusaz_wind_speed',
    'has_entity_name': False,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.WIND_SPEED: 'wind_speed'>,
    'original_icon': None,
    'original_name': 'La Clusaz Wind speed',
    'platform': 'meteo_france',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': '45.90417,6.42306_wind_speed',
    'unit_of_measurement': <UnitOfSpeed.KILOMETERS_PER_HOUR: 'km/h'>,
  })
# ---
# name: test_sensor[sensor.la_clusaz_wind_speed-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'attribution': 'Data provided by Météo-France',
      'device_class': 'wind_speed',
      'friendly_name': 'La Clusaz Wind speed',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': <UnitOfSpeed.KILOMETERS_PER_HOUR: 'km/h'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.la_clusaz_wind_speed',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '29',
  })
# ---
# name: test_sensor[sensor.magicmock_name_meteofranceclient_get_rain_position_getitem_id_124620826535856_next_rain-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.magicmock_name_meteofranceclient_get_rain_position_getitem_id_124620826535856_next_rain',
    'has_entity_name': False,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.TIMESTAMP: 'timestamp'>,
    'original_icon': None,
    'original_name': "<MagicMock name='MeteoFranceClient().get_rain().position.__getitem__()' id='124620826535856'> Next rain",
    'platform': 'meteo_france',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': "<MagicMock name='MeteoFranceClient().get_rain().position.__getitem__()' id='124620826535856'>,<MagicMock name='MeteoFranceClient().get_rain().position.__getitem__()' id='124620826535856'>_next_rain",
    'unit_of_measurement': None,
  })
# ---
# name: test_sensor[sensor.magicmock_name_meteofranceclient_get_rain_position_getitem_id_124620826535856_next_rain-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      '1_hour_forecast': dict({
      }),
      'attribution': 'Data provided by Météo-France',
      'device_class': 'timestamp',
      'forecast_time_ref': '1970-01-01T00:00:01+00:00',
      'friendly_name': "<MagicMock name='MeteoFranceClient().get_rain().position.__getitem__()' id='124620826535856'> Next rain",
    }),
    'context': <ANY>,
    'entity_id': 'sensor.magicmock_name_meteofranceclient_get_rain_position_getitem_id_124620826535856_next_rain',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_sensor[sensor.magicmock_name_meteofranceclient_get_warning_current_phenomenoms_domain_id_id_124620826528800_weather_alert-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.magicmock_name_meteofranceclient_get_warning_current_phenomenoms_domain_id_id_124620826528800_weather_alert',
    'has_entity_name': False,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': 'mdi:weather-cloudy-alert',
    'original_name': "<MagicMock name='MeteoFranceClient().get_warning_current_phenomenoms().domain_id' id='124620826528800'> Weather alert",
    'platform': 'meteo_france',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': "<MagicMock name='MeteoFranceClient().get_warning_current_phenomenoms().domain_id' id='124620826528800'> Weather alert",
    'unit_of_measurement': None,
  })
# ---
# name: test_sensor[sensor.magicmock_name_meteofranceclient_get_warning_current_phenomenoms_domain_id_id_124620826528800_weather_alert-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'attribution': 'Data provided by Météo-France',
      'friendly_name': "<MagicMock name='MeteoFranceClient().get_warning_current_phenomenoms().domain_id' id='124620826528800'> Weather alert",
      'icon': 'mdi:weather-cloudy-alert',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.magicmock_name_meteofranceclient_get_warning_current_phenomenoms_domain_id_id_124620826528800_weather_alert',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'Vert',
  })
# ---
